fix:Add fix for nav sidebar overlap

--- a/src/components/Investor/InvestorHome/investorHome.scss
+++ b/src/components/Investor/InvestorHome/investorHome.scss
@@ -1,5 +1,5 @@
 .investorHome_main_container {
-  margin-top: 30px;
+  margin-top: 40px;
   display: flex;
 
   .typography {
